--- a/index.html
+++ b/index.html
@@ -257,18 +257,18 @@
 				<p>
 					<a href="https://en.wikipedia.org/wiki/Digesting_Duck" target="_blank"><b>Mechanische Eend</b></a><br />
 					<i>Jacques de Vaucanson</i><br />
-					De mechanische eend is een uitvindig van Jacques de Vaucanson in 1739 in Frankrijk. Het is een eend die graankorrels kon eten en verteren (de vertering bleek later niet echt te werken).<br />
+					De mechanische eend is een uitvinding van Jacques de Vaucanson in 1739 in Frankrijk. Het is een eend die graankorrels kon eten en verteren (de vertering bleek later niet echt te werken).<br />
 					Ik vind dit een heel interessant project. Het fachineert met dat ze in 1739 al bezig waren met artificial creatures. Het is duidelijk dat it in die tijd een hele bijzonderen en verniewende uitvinding was. Het is eigenlijk een van de eertse robots. Ik vind het ook leuk dat ze een eend hebben gekozen om te automatiseren. De focus op het verteringsysteem vind ik minder interessant, ik denk dat het juist een voordeel is dat robots niet hoeven te eten.
 				</p>
 				<p>
 					<a href="" target="_blank"><b>Google Home</b></a><br />
 					<i>Google</i><br />
 					Google Home is een voice assistent die je allerlei vragen kan stellen met je stem.<br/>
-					De Google Home heeft een eigen persoonlijkheid en klinkt anders dan Siri of Alexa. Er word express aandacht besteed aan de persoonlijkhied van de voice assistent want als gebruikers een connectie hebben met Google Home, maken ze er sneller gebruik van en voelen ze zich meer op gemak bij het gebruik. Google heeft een speciaal team dat zich bezig houd met de persoonlijhied van de Google Assistent. Dit drukt zich uit in antwoorden op vragen zoals 'wat is je lieveligskleur?' en 'Wat zijn je hobbies?'.
+					De Google Home heeft een eigen persoonlijkheid en klinkt anders dan Siri of Alexa. Er wordt expres aandacht besteed aan de persoonlijkheid van de voice assistent want als gebruikers een connectie hebben met Google Home, maken ze er sneller gebruik van en voelen ze zich meer op gemak bij het gebruik. Google heeft zelfs een speciaal team dat zich bezig houdt met de persoonlijkheid van de Google Assistent. Dit drukt zich uit in antwoorden op vragen zoals 'wat is je lievelingskleur?' en 'Wat zijn je hobbies?'.
 				</p>
 				<h3>Experimenteren</h3>
 				<p>
-					Na het onderzoek doen ben ik gaan experimenteren en met de techniek, in dit geval de software Processing. In de les had ik voorbeelden gezien van stipjes en vormen die zich als zelfstandige wezens rondbewogen over het scherm en zelfs kolonies vormden. Met dit idee ben ik gaan coderen. Ik had een wiskundige formule gevonden die je kan gebruiken om grafieken mee te maken. Door de variable t te veranderen in de coodinaten x(t) en y(t), kon ik een stip over het canvas laten bewegen. Door stukjes van de formule voor x en y te veranderen onstaan er steeds andere vormen die er vaak organisch uit zien. Een beetje alsof er cellen groeien, of een kronkelige plant. Om de vormen spectaculaider te maken heb ik gezorgt dat de hue van de stipjes verandert. Ik heb ook wat interactie toegevoegt door een getal in de fomule te laten veranderen als er een toets word ingedrukt. Ten slotte is het mij gelukt om twee fomules te gebruiken als twee uitenden van een lijn. Een aantal van mijn best gelukte experimenten met de vormen zijn hier onder te zien.
+					Na het onderzoek doen ben ik gaan experimenteren en met de techniek, in dit geval de software Processing. In de les had ik voorbeelden gezien van stipjes en vormen die zich als zelfstandige wezens rondbewogen over het scherm en zelfs kolonies vormden. Met dit idee ben ik gaan coderen. Ik had een wiskundige formule gevonden die je kan gebruiken om grafieken mee te maken. Door de variable t te veranderen in de coordinaten x(t) en y(t), kon ik een stip over het canvas laten bewegen. Door stukjes van de formule voor x en y te veranderen onstaan er steeds andere vormen die er vaak organisch uit zien. Een beetje alsof er cellen groeien, of een kronkelige plant. Om de vormen spectaculairder te maken heb ik gezorgd dat de hue van de stipjes verandert. Ik heb ook wat interactie toegevoegd door een getal in de formule te laten veranderen als er een toets wordt ingedrukt. Tenslotte is het mij gelukt om twee formules te gebruiken als twee uiteinden van een lijn. Een aantal van mijn best gelukte experimenten met de vormen zijn hier onder te zien.
 				</p>
 				<div class="galerij">
 					<img src="media/organisch (1).png"/>
@@ -285,7 +285,7 @@
 					In mijn volgende experimenten wilde ik een duidelijk herkenbaar atificial creature maken. Dit heb ik met de Arduino Led matrix gedaan en met Processing.
 				</p>
 				<p>
-					Eerst heb ik geprobeerd om een atificial creature te maken door de LED matrix te grbuiken. Op de LED matrix zie je het gezicht van het wezen. Het wezen kan verschillende emoties uitdrukken. In de volgende stap wilde ik en knop aan de Arduino toevoegen, zodat je met het wezen zou kunnen interacteren, maar dit is niet gelukt.
+					Eerst heb ik geprobeerd om een atificial creature te maken door de LED matrix te gebruiken. Op de LED matrix zie je het gezicht van het wezen. Het wezen kan verschillende emoties uitdrukken. In de volgende stap wilde ik een knop aan de Arduino toevoegen, zodat je met het wezen zou kunnen interacteren, maar dit is niet gelukt.
 				</p>
 				<div class="galerij">
 					<img src="media/ledproto (1).png"/>
@@ -293,7 +293,7 @@
 					<iframe src="https://www.youtube.com/embed/6xcY8NLarcg" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 				</div>
 				<p>
-					Met vormen heb ik een beestje gemaakt in Processing. Vervolgens heb ik twee knoppen toe gevoegd waardoor je met het wezen kan interacteren. Als je met de muis over het hartje hovert, word het beestje blij; als je met je muis over het gebroken hart hovert word het beestje ontevreden.
+					Met vormen heb ik een beestje gemaakt in Processing. Vervolgens heb ik twee knoppen toegevoegd waardoor je met het wezen kan interacteren. Als je met de muis over het hartje hovert, wort het beestje blij; als je met je muis over het gebroken hart hovert wordt het beestje ontevreden.
 				</p>
 				<div class="galerij">
 					<img src="media/beest (1).png"/>
@@ -301,7 +301,156 @@
 					<iframe src="https://www.youtube.com/embed/cSuH8_is0ws" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 				</div>
 				<h3>Product</h3>
-				<p></p>
+				<p>
+					Als eindproduct voor het onderdeel artificial creature heb ik het beestje dat ik met Processing heb gemaakt tijdens het experimenteren verder uitgebreid en uitgewerkt. Ik heb een artificial creature gemaakt die in je computer leeft. Je kan met het beesjte interacteren en hem verzorgen.
+				</p>
+				<iframe src="https://www.youtube.com/embed/ORMobxQ-x5k" class="groot" height="400" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+				<p>
+					Met de drie knoppen bovenaan het scherm kan je met het beestje interacteren. De knoppen werken met if else statements en een variable die bij houdt hoeveel keer er op de knop is gedrukt. Op deze manier kan je door verschillende opties klikken. De afbeeldingen op de knoppen heb ik zelf getekend.
+				</p>
+				<p>
+					Met de eerste knop kan je het beestje personaliseren door zijn kleur te veranderen. Als er op de knop wordt gedrukt, wordt er steeds een andere RGB waarde aan de variable kleurbeest gegeven.
+				</p>
+				<img src="media/ac (1).png" class="groot"/>
+				<p>
+					Met de tweede knop kan je het beestje voeren, waardoor hij steeds groter wordt. Elke keer als er op de knop wordt gedrukt, wordt er wat toegevoegd aan de grootte van het beestje.
+				</p>
+				<img src="media/ac (2).png" class="groot"/>
+				<p>
+					Met de derde knop doe je het licht uit en laat je het beestje slapen. De achtergrond wordt dan donker en de y waarde van de ogen word kleiner gemaakt.
+				</p>
+				<img src="media/ac (3).png" class="groot"/>
+				<p>
+					Tot slot kijken de ogen in de richting van je muis door mouseX en mouseY te gebruiken. 
+				</p>
+				<p>
+					Hier onder is de hele code te zien, als je de code in Processing plakt en uitvoert kan je zelf met het beestje interacteren!
+				</p>
+				<script type="text/html">
+//https://colorhunt.co/palette/165754
+
+color ag=color(250);
+int oogl =200;
+int oogr =300;
+int oogh =250;
+
+PImage outfit;
+int klik1=0;
+color kleurbeest=color(246, 92, 120);
+
+PImage eten;
+int klik2=0;
+int grotex=220;
+int grotey=200;
+
+PImage slapen;
+int klik3=0;
+int oog=50;
+
+void setup(){
+  background(ag);
+  size(500,500);
+  
+  outfit = loadImage("outfit.png");
+  eten = loadImage("eten.png");
+  slapen = loadImage("slapen.png");
+}
+
+void draw(){  
+  //beest
+  noStroke();
+  fill(kleurbeest);
+  ellipseMode(CENTER);
+  ellipse(250, 250, grotex, grotex);
+  
+  //oog1
+  noStroke();
+  fill(0, 0, 0);
+  ellipseMode(CENTER);
+  ellipse(oogl+mouseX/100, oogh+mouseY/100, 50, oog);
+  
+  //oog2
+  noStroke();
+  fill(0, 0, 0);
+  ellipseMode(CENTER);
+  ellipse(oogr+mouseX/100, oogh+mouseY/100, 50, oog);
+  
+  //snoet
+  fill(255, 169, 148);
+  triangle(225, 275, 275, 275, 250, 300);
+  
+  //knop1 outfit
+  if (mouseOverRect1() == true && mousePressed == true) { // If mouse is over square, 
+    if(klik1==3){
+      klik1=0;
+    }
+    else{
+      klik1++;
+    }
+    if(klik1==1){
+      kleurbeest=color(255, 210, 113);
+      delay(100);
+    }
+    else if(klik1==2){
+      kleurbeest=color(195, 245, 132);
+      delay(100);
+    }
+    else if(klik1==3){
+      kleurbeest=color(246, 92, 120);
+      delay(100);
+    }
+  }   
+  fill(ag);
+  rect(10, 10, 100, 100);
+  image(outfit, 10, 10, 100, 100);
+  
+  //knop2 eten
+  if (mouseOverRect2() == true&& mousePressed == true) { // If mouse is over square,
+    grotex=grotex+10;
+    grotey=grotey+2;
+  }   
+  fill(ag);
+  rect(200, 10, 100, 100);
+  image(eten, 200, 10, 100, 100);
+  
+  //knop3 slapen
+  if (mouseOverRect3() == true&& mousePressed == true) { // If mouse is over square,
+    if(klik2==2){
+      klik2=0;
+    }
+    else{
+      klik2++;
+    }
+    if(klik2==0){
+      ag=250;
+      background(250);
+      oog=50;
+      delay(100);
+    }
+    else if(klik2==1){
+      ag=20;
+      background(20);
+      oog=10;
+      delay(100);
+    }
+  }   
+  fill(ag);
+  rect(390, 10, 100, 100);
+  image(slapen, 390, 10, 100, 100);
+}
+  
+boolean mouseOverRect1() { // Test if mouse is over square
+  return ((mouseX >= 10) && (mouseX <= 110) && (mouseY >= 10) && (mouseY <= 110));
+}
+
+boolean mouseOverRect2() { // Test if mouse is over square
+  return ((mouseX >= 200) && (mouseX <= 300) && (mouseY >= 10) && (mouseY <= 110));
+}
+
+boolean mouseOverRect3() { // Test if mouse is over square
+  return ((mouseX >= 390) && (mouseX <= 490) && (mouseY >= 10) && (mouseY <= 110));
+}
+				</script>
 				<h3>Reflectie</h3>
 				<p></p>
 			</article>
