--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 		<a name="menu"></a>
 		<header>
 			<h1>HCI portfolio</h1>
-			<em>Anna - CMD 2d - 2020</em>
+			<em>Anna - 18068391 - CMD 2d - 2020</em>
 			<nav>
 				<a href="#vr">AR & VR</a><a href="#wearables">Wearables</a><a href="#creatures">Artificial creatures</a><a href="#play">Playfull interaction</a><a href="#workshops">Workshops</a><a href="#gastcollege">Gastcollege</a>
 			</nav>
@@ -190,9 +190,9 @@
 				<div class="galerij">
 					<img src="media/ovensensor (1).png"/>
 					<img src="media/ovensensor (2).jpg"/>
+					<iframe src="https://www.youtube.com/embed/hUr1hWqKauU" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 					<img src="media/ovensensor (3).jpg"/>
 					<img src="media/ovensensor (4).jpg"/>
-					<iframe src="https://www.youtube.com/embed/hUr1hWqKauU" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 				</div>
 				<h3>Product</h3>
 				<p>
