--- a/index.html
+++ b/index.html
@@ -668,9 +668,40 @@ void beestSize(){
 			<a name="gastcollege"></a>
 			<article>
 				<h2>Gastcollege</h2>
-				<p></p>
-				<h3>Reflectie</h3>
-				<p></p>
+				<b>Métamatics</b><br />
+				<i>Jean Tinguely</i><br /><br />
+				<div class="galerij">
+					<img src="media/metamatics (1).jpg"/>
+					<img src="media/metamatics (2).jpg"/>
+					<img src="media/metamatics (3).jpg"/>
+				</div>
+				<div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/185929154?byline=0" style="position:absolute;top:0;left:0;width:100%;height:100%;" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe></div>
+				<p>
+					De Métamatics hebben als thema de betekenis van kunst en machines.<br/>
+					Door de opkomst van de fotografie inspireerde de werkelijkheid kunstenaars steeds minder en gingen ze abstracter werk maken. Ze gingen op zoek naar andere manieren om inspiratie te vinden en kunst te maken. De Métamatics creëren kunst op een onbewuste en toevallige manier. Hiermee wordt de vraag gesteld: wat is kunst? En wie is de kunstenaar?<br/>
+					De Métamatics zijn machines die kunst maken, maar verder niet productief. Het zijn machines die eigenlijk geen functie hebben en gaan over het filosofische idee van een machine, hierom worden ze meta-machines genoemd.
+				</p>
+				<p>
+					De Métamatics zijn (creatieve) machines die kunstwerken maken. <br/>
+					De machine wordt in beweging gezet en via verschillende tandwielen en mechanismen wordt een arm met een pen eraan vast aangestuurd. De pen raakt een leeg vel papier en tekent er op. Doordat de machine de arm met de pen op verschillende manieren laat bewegen ontstaat er een tekening op het papier.
+				</p>
+				<p>
+					De machines zijn gemaakt van allerlei soorten materialen en onderdelen van spullen die soms geheel in de machines verwerkt zijn; zoals een emmer of een wiel van een kar. Het opvallende is dat de machines geen technologie bevatten en vaak worden aangedreven met menselijke kracht, bijvoorbeeld door iemand te laten trappen of aan een hendel te laten draaien. Door de tandwielen en mechanismes zonder een precies uitgedacht plan in elkaar te zetten heeft Tinguely zelf geen idee wat de uitkomst van de kunstwerken die de machines maken zou zijn. De gecreëerde kunstwerken ontstaan bij toeval.
+				</p>
+				<p>
+					De Métamatics zijn interessant voor HCI omdat de machines gaan over de relatie tussen mens en machines. Ze beginnen een discussie over de eigenaar van de kunstwerken. Is de kunstenaar de machine, de persoon die de machine aandrijft, of de maker van de machine? Ook is het een creatieve machine. Creativiteit is een menselijke eigenschap en er is tot op het heden discussie over de mogelijkheid van machines om creatief te zijn.
+				</p>
+				<p>
+					Ik houd erg van kunst en maak zelf ook graag kunst. Dit project trok meteen mijn interesse omdat het niet allen een machine, maar ook een kunstproject is. De vragen die worden gesteld over kunst vind ik interessant. Als ik teken, gebruik ik programma’s op mijn laptop, en deze programma’s hebben invloed op de uitkomst van de tekening (bijvoorbeeld de kleuren die je kan gebruiken, het formaat). Zijn de programma’s dan ook een beetje kunstenaar? Bij het tekenen doe ik al het werk nog zelf maar bij bijvoorbeeld mijn experimenten in processing heb ik de code geschreven en een paar waardes aan een variabele toegekend, maar voert de computer de code uit en creëert de computer de kunst. Ik denk dat het belangrijk is om hierover na te denken, zeker omdat er in de toekomst steeds meer technologie zal ontstaan die kan helpen met kunstwerken maken, of zelf kunst maakt.
+				</p>
+					<b>Bronnen</b>
+				<ul>
+					<li><a href="https://sites.google.com/view/botslikeyou/creative-bots/jean-tinguely?authuser=0" target="_blank">Bots Like You</a></li>
+					<li><a href="https://www.stedelijk.nl/nl/tentoonstellingen/jean-tinguely" target="_blank">Stedelijk Museum - Tentoonstelling Jean Tinguely</a></li>
+					<li><a href="https://en.wikipedia.org/wiki/M%C3%A9tamatic" target="_blank">Wikipedia - Métamatics</a></li>
+					<li><a href="http://www.artnet.com/artists/jean-tinguely/" target="_blank">Artnet - Jean Tinguely</a></li>
+					<li><a href="https://www.kunstbus.nl/kunst/jean+tinguely.html" target="_blank">Kunstbus - Jean Tinguely</a></li>
+				</ul>
 			</article>
 		</main>
 		<footer></footer>
